--- a/Practica 2/paginaRedes/src/app/pages/book/book.component.html
+++ b/Practica 2/paginaRedes/src/app/pages/book/book.component.html
@@ -5,6 +5,31 @@
     <app-navbar></app-navbar>
 
 
+    <div class="bg-light py-3">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 mb-0"><a href="index.html">Sale en Vacas</a> <span class="mx-2 mb-0">/</span> <strong class="text-black">Nombre del Libro</strong></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="site-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img src="assets/images/cloth_1.jpg" alt="Image" class="img-fluid">
+          </div>
+          <div class="col-md-6">
+            <h2 class="text-black">Tank Top T-Shirt</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, vitae, explicabo? Incidunt facere, natus soluta dolores iusto! Molestiae expedita veritatis nesciunt doloremque sint asperiores fuga voluptas, distinctio, aperiam, ratione dolore.</p>
+            <p class="mb-4">Ex numquam veritatis debitis minima quo error quam eos dolorum quidem perferendis. Quos repellat dignissimos minus, eveniet nam voluptatibus molestias omnis reiciendis perspiciatis illum hic magni iste, velit aperiam quis.</p>
+            <p><strong class="text-primary h4">$50.00</strong></p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
     <app-footer></app-footer>
   </div>
 </body>
