--- a/Practica 2/paginaRedes/src/app/pages/contacto/contacto.component.html
+++ b/Practica 2/paginaRedes/src/app/pages/contacto/contacto.component.html
@@ -19,7 +19,7 @@
               <div class="block-16">
                 <figure>
                   <img src="assets/images/books.jpg" alt="Image placeholder" class="img-fluid rounded">
-                  <a href="https://www.youtube.com/watch?v=NjZCwuXxQOs" class="play-button popup-vimeo"><span class="ion-md-play"></span></a>
+                  <a href="https://www.youtube.com/watch?v=NjZCwuXxQOs" class="play-button popup-vimeo"><span class="icon icon-play"></span></a>
                 </figure>
               </div>
             </div>
@@ -30,7 +30,7 @@
               <div class="site-section-heading pt-3 mb-4">
                 <h2 class="text-black"> Redes de Computadoras 1 </h2>
               </div>
-              <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius repellat, dicta at laboriosam, nemo exercitationem itaque eveniet architecto cumque, deleniti commodi molestias repellendus quos sequi hic fugiat asperiores illum. Atque, in, fuga excepturi corrupti error corporis aliquam unde nostrum quas.</p>
+              <p> Una red de computadoras (también llamada red de ordenadores o red informática) es un conjunto de equipos nodos y software conectados entre sí por medio de dispositivos físicos o inalámbricos que envían y reciben impulsos eléctricos, ondas electromagnéticas o cualquier otro medio para el transporte de datos, con la finalidad de compartir información, recursos y ofrecer servicios.</p>
               <p> Primer Semestre 2021, Universidad de San Carlos de Guatemala, Ingeniería en Ciencias y sistemas.</p>
 
             </div>
@@ -56,7 +56,7 @@
                     <p class="block-38-subheading">CEO/Co-Founder</p>
                   </div>
                   <div class="block-38-body">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio recusandae doloribus ut fugit officia voluptate soluta. </p>
+                    <p> luarana631@gmail.com </p>
                   </div>
                 </div>
               </div>
@@ -70,7 +70,7 @@
                     <p class="block-38-subheading">Co-Founder</p>
                   </div>
                   <div class="block-38-body">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio recusandae doloribus ut fugit officia voluptate soluta. </p>
+                    <p>correo@gmail.con</p>
                   </div>
                 </div>
               </div>
@@ -84,7 +84,7 @@
                     <p class="block-38-subheading">Marketing</p>
                   </div>
                   <div class="block-38-body">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio recusandae doloribus ut fugit officia voluptate soluta. </p>
+                    <p>correo@gmail.com</p>
                   </div>
                 </div>
               </div>
@@ -98,7 +98,7 @@
                     <p class="block-38-subheading">Sales Manager</p>
                   </div>
                   <div class="block-38-body">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio recusandae doloribus ut fugit officia voluptate soluta. </p>
+                    <p>correo@gmail.com</p>
                   </div>
                 </div>
               </div>
