--- a/Practica 2/paginaRedes/src/assets/css/bootstrap/bootstrap-reboot.css
+++ b/Practica 2/paginaRedes/src/assets/css/bootstrap/bootstrap-reboot.css
@@ -111,7 +111,7 @@ sup {
   top: -.5em; }
 
 a {
-  color: #7971ea;
+  color: #1658CB;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects; }
