--- a/Practica2/paginaRedes/src/app/pages/books/books.component.html
+++ b/Practica2/paginaRedes/src/app/pages/books/books.component.html
@@ -24,20 +24,22 @@
                 </div>
               </div>
 
+
               <div class="row mb-5">
-                <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
-                  <div class="block-4 text-center border">
-                    <figure class="block-4-image">
-                      <a routerLink="/book"><img src="assets/images/cloth_1.jpg" alt="Image placeholder" class="img-fluid"></a>
-                    </figure>
-                    <div class="block-4-text p-4">
-                      <h3><a routerLink="/book">Tank Top</a></h3>
-                      <p class="mb-0">Finding perfect t-shirt</p>
-                      <p class="text-primary font-weight-bold">$50</p>
+                <ng-container *ngFor="let book of books_list">
+                  <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
+                    <div class="block-4 text-center border">
+                      <figure class="block-4-image">
+                        <a (click)="selectBook(book)"><img src="assets/images/cloth_1.jpg" alt="Image placeholder" class="img-fluid"></a>
+                      </figure>
+                      <div class="block-4-text p-4">
+                        <h3><a routerLink="/book"> {{book.nombre}} </a></h3>
+                        <p class="mb-0"> {{book.descripcion}} </p>
+                        <p class="text-primary font-weight-bold">Q{{book.precio}}</p>
+                      </div>
                     </div>
                   </div>
-                </div>
-
+                </ng-container>
               </div>
               <div class="row" data-aos="fade-up">
                 <div class="col-md-12 text-center">
@@ -58,9 +60,9 @@
               <div class="border p-4 rounded mb-4">
                 <h3 class="mb-3 h6 text-uppercase text-black d-block">Categories</h3>
                 <ul class="list-unstyled mb-0">
-                  <li class="mb-1"><a href="#" class="d-flex"><span>Men</span> <span class="text-black ml-auto">(2,220)</span></a></li>
-                  <li class="mb-1"><a href="#" class="d-flex"><span>Women</span> <span class="text-black ml-auto">(2,550)</span></a></li>
-                  <li class="mb-1"><a href="#" class="d-flex"><span>Children</span> <span class="text-black ml-auto">(2,124)</span></a></li>
+                  <li class="mb-1"><a href="#" class="d-flex"><span>Comics</span> <span class="text-black ml-auto">(-)</span></a></li>
+                  <li class="mb-1"><a href="#" class="d-flex"><span>Novelas</span> <span class="text-black ml-auto">(-)</span></a></li>
+                  <li class="mb-1"><a href="#" class="d-flex"><span>Comedias</span> <span class="text-black ml-auto">(-)</span></a></li>
                 </ul>
               </div>
 
