--- a/Practica2/paginaRedes/src/app/pages/add-book/add-book.component.html
+++ b/Practica2/paginaRedes/src/app/pages/add-book/add-book.component.html
@@ -27,31 +27,31 @@
                   <div class="form-group row">
                     <div class="col-md-12">
                       <label for="c_email" class="text-black">Nombre del libro <span class="text-danger">*</span></label>
-                      <input type="email" placeholder="Nombre del libro" class="form-control" id="c_email" name="c_email">
+                      <input  [(ngModel)]="nombre" type="email" placeholder="Nombre del libro" class="form-control" id="c_email" name="c_email">
                     </div>
                   </div>
 
                   <div class="form-group row">
                     <div class="col-md-6">
                       <label for="c_fname" class="text-black">Cantidad Stock <span class="text-danger">*</span></label>
-                      <input type="text" placeholder="Cantidad stock" class="form-control" id="c_fname" name="c_fname">
+                      <input  [(ngModel)]="cantidad" type="text" placeholder="Cantidad stock" class="form-control" id="c_fname" name="c_fname">
                     </div>
                     <div class="col-md-6">
                       <label for="c_lname" class="text-black">Precio Unitario <span class="text-danger">*</span></label>
-                      <input type="text" class="form-control" placeholder="Precio" id="c_lname" name="c_lname">
+                      <input  [(ngModel)]="precio" type="text" class="form-control" placeholder="Precio" id="c_lname" name="c_lname">
                     </div>
                   </div>
 
                   <div class="form-group row">
                     <div class="col-md-12">
                       <label for="c_message" class="text-black">Descripción </label>
-                      <textarea placeholder="Descripción del libro" name="c_message" id="c_message" cols="30" rows="7" class="form-control"></textarea>
+                      <textarea  [(ngModel)]="descripcion" placeholder="Descripción del libro" name="c_message" id="c_message" cols="30" rows="7" class="form-control"></textarea>
                     </div>
                   </div>
 
                   <div class="form-group row">
                     <div class="col-lg-12">
-                      <input type="submit" class="btn btn-primary btn-lg btn-block" value="Cargar Libro">
+                      <input type="submit" class="btn btn-primary btn-lg btn-block" (click)="new_book()" value="Cargar Libro">
                     </div>
                   </div>
 
