--- a/Practica2/paginaRedes/src/app/pages/book/book.component.html
+++ b/Practica2/paginaRedes/src/app/pages/book/book.component.html
@@ -20,10 +20,9 @@
             <img src="assets/images/cloth_1.jpg" alt="Image" class="img-fluid">
           </div>
           <div class="col-md-6">
-            <h2 class="text-black">Tank Top T-Shirt</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, vitae, explicabo? Incidunt facere, natus soluta dolores iusto! Molestiae expedita veritatis nesciunt doloremque sint asperiores fuga voluptas, distinctio, aperiam, ratione dolore.</p>
-            <p class="mb-4">Ex numquam veritatis debitis minima quo error quam eos dolorum quidem perferendis. Quos repellat dignissimos minus, eveniet nam voluptatibus molestias omnis reiciendis perspiciatis illum hic magni iste, velit aperiam quis.</p>
-            <p><strong class="text-primary h4">$50.00</strong></p>
+            <h2 class="text-black">{{data_book.nombre}}</h2>
+            <p>{{data_book.descripcion}}</p>
+            <p><strong class="text-primary h4">Q{{data_book.precio}}</strong></p>
           </div>
         </div>
       </div>
